# Practical-LLM-Projects

./: .gitignore  05_综合案例.md  README.md  sync-log.txt  sync-silent.ps1  sync.ps1  大模型应用开发工程师面试指南.md
dental-rag-system/: .env.example  .gitignore  CHANGELOG.md  README.md  dental-rag-system.lnk  frontend.html  loaded_files.json  requirements.txt  run.bat  run.py  setup.bat  start.bat
legal-doc-rag/: .dockerignore  .env.example  .env.example.orig  .gitignore  Dockerfile  README.md  _mod_integrate.py  _mod_scan.py  _mod_v2.py  _mod_v3.py  _mod_v4.py  _mod_v5.py  check_quotes.py  docker-compose.yml  fix_final.py  fix_forgetting.py  fix_forgetting2.py  fix_forgetting3.py  fix_fstring.py  fix_fstring2.py  fix_fstring3.py  fix_fstring4.py  fix_fstring5.py  fix_fstring7.py  fix_rewrite.py  healthcheck.py  install_wsl_now.bat  modify_app.py  readme.py  requirements.txt  requirements.txt.bak  requirements.txt.orig  run_eval.py  start-local.bat  (+7 more)
rag-project/backend/: .dockerignore  Dockerfile  demo_verified.txt  pyproject.toml  requirements.txt
rag-project/backend/app/: config.py  main.py  models.py
rag-project/backend/app/api/: chat.py  documents.py
rag-project/backend/app/evaluation/: metrics.py  runner.py
rag-project/backend/app/generation/: llm.py  prompt_templates.py
rag-project/backend/app/ingestion/: chunker.py  loader.py  pipeline.py  vision_caption.py
rag-project/backend/app/retrieval/: citation.py  embedder.py  hybrid_retriever.py  retriever.py  vector_store.py
rag-project/backend/scripts/: run_regression.py
rag-project/backend/tests/: golden_test_set.json
(+167 files in other folders)
